--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
 </title>
 <script type="text/javascript">
 <script type="text/javascript">
-var LHCChatOptions = {};
-LHCChatOptions.opt = {widget_height:340,widget_width:300,popup_height:520,popup_width:500};
+var LHCChatboxOptions = {hashchatbox:'empty',identifier:'default',status_text:'Chatbox'};
 (function() {
 var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-var referrer = (document.referrer) ? encodeURIComponent(document.referrer.substr(document.referrer.indexOf('://')+1)) : '';
-var location  = (document.location) ? encodeURIComponent(window.location.href.substring(window.location.protocol.length)) : '';
-po.src = '//localhost:57738/index.php/chat/getstatus/(click)/internal/(position)/bottom_right/(ma)/br/(top)/350/(units)/pixels/(leaveamessage)/true/(department)/3?r='+referrer+'&l='+location;
+po.src = '//localhost:57738/index.php/chatbox/getstatus/(position)/bottom_right/(top)/300/(units)/pixels/(width)/300/(theme)/3/(height)/300/(chat_height)/220';
 var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
 })();
 </script>
